prevent zoom-in on input area on Safari iOS

--- a/easy_llama/templates/styles.css
+++ b/easy_llama/templates/styles.css
@@ -42,6 +42,7 @@ h1 {
 }
 
 .message {
+    font-size: small;
     margin: 10px 0;
     padding: 10px;
     border-radius: 10px;
@@ -87,6 +88,7 @@ textarea {
     margin-bottom: 10px;
     background-color: #222222;
     color: white;
+    font-size: 16px;  /* this is necessary to prevent iOS safari from zooming in on the input box */
 }
 
 button {
